# aleph

./: .gitignore  README.md  pyproject.toml
src/aleph/: config.py
src/aleph/model/: __init__.py  attention.py  block.py  embed.py  ffn.py  model.py  moe.py  norm.py
src/aleph/train/: __init__.py  loss.py
tests/: test_attention.py  test_config.py  test_embed.py  test_ffn.py  test_loss.py  test_moe.py  test_norm.py
