[project]
name = "aleph"
version = "0.1.0"
description = "A Mixture-of-Experts LLM trained from scratch in JAX/Flax NNX on Modal, with custom Pallas/Mosaic kernels."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Ananth Nambiar" }]

# Core deps that are safe to install anywhere (incl. macOS / CPU for smoke tests).
# GPU/TPU JAX is installed inside the Modal image (see modal/app.py), not here.
dependencies = [
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "flax>=0.10.2",          # provides flax.nnx
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.0",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Compute / data / experiment tracking. Installed in the Modal image.
train = [
    "modal>=0.64",
    "wandb>=0.17",
    "tiktoken>=0.7",
    "datasets>=2.20",
]
# Local dev + tests.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
# CUDA JAX — pulled inside the Modal image, pinned there. Listed for reference.
cuda = [
    "jax[cuda12]>=0.4.35",
]

[project.scripts]
aleph-train = "aleph.train.loop:main"
aleph-sample = "aleph.sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aleph"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E741"]  # ambiguous var names (i, l) are fine in math code

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
